Added footer and style

--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     </header>
 
     <div id="app"></div>
+
+    <footer>
+      <section class="item">Stuff #1</section>
+      <section class="item">Stuff #2</section>
+      <section class="item">Stuff #3</section>
+    </footer>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
