--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
       </nav>
     </header>
 
-    <div id="app"></div>
+    <div id="app">
+      <form>
+        <label>Username</label>
+        <input type="text" />
+      </form>
+    </div>
 
     <footer>
       <section class="item">Stuff #1</section>
