--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
       </nav>
     </header>
 
-    <div id="app"></div>
+    <div id="app">
+      <div class="hero">
+        <div class="background">
+          The content goes here
+        </div>
+      </div>
+    </div>
 
     <footer>
       <section class="item">Stuff #1</section>
